--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "scraping",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "puppeteer-core": "^20.7.3"
-  }
+    "name": "scraping",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "src/index.ts",
+    "scripts": {
+        "start": "ts-node src/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "puppeteer-core": "^20.7.3"
+    },
+    "devDependencies": {
+        "@swc/core": "^1.3.67",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
+    }
 }
